# CouchLink

./: CMakeLists.txt  LICENSE  README.md  build.py  build_gui.py  couchlink.py  couchlink_gui.py  requirements.txt  virtual_couch.py
controller/: main.cpp
core/: capture.hpp  inject.hpp  input_core.hpp  net.hpp
host/: main.cpp
relay/: couchlink_relay.py
